# SAM-ONNX-AX650-CPP

./: .gitignore  CMakeLists.txt  README.md  webui.py
qtproj/SAMQT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myqlabel.h
script/: onnx_run.py
src/: main.cpp  main_inpaint.cpp
src/Runner/: BaseRunner.cpp  BaseRunner.hpp  LamaInpaint.hpp  LamaInpaintAX650.hpp  LamaInpaintOnnx.hpp  SAM.hpp  SAMDecoderAX650.hpp  SAMDecoderOnnx.hpp  SAMEncoder.hpp  SAMEncoderAX650.hpp  SAMEncoderOnnx.hpp  ax_model_runner.hpp  ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp
src/Runner/OnnxWarpper/: OnnxWarpper.hpp
src/Runner/OpenvinoWarpper/: OpenvinoWarpper.hpp
